--- a/apphere/Base.lproj/Main.storyboard
+++ b/apphere/Base.lproj/Main.storyboard
@@ -158,10 +158,10 @@ Developer: Derek Sheldon</string>
             </objects>
             <point key="canvasLocation" x="-900" y="0.0"/>
         </scene>
-        <!--Home View Controller-->
+        <!--Business List View Controller-->
         <scene sceneID="FYs-ts-ggw">
             <objects>
-                <viewController id="La9-D8-5uU" userLabel="Home View Controller" customClass="BusinessListViewController" customModule="apphere" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="La9-D8-5uU" customClass="BusinessListViewController" customModule="apphere" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="LTk-w2-tFT">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -176,7 +176,7 @@ Developer: Derek Sheldon</string>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="20"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="business" id="tuY-EE-hgc" userLabel="Business" customClass="BusinessCell" customModule="apphere" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="business" id="tuY-EE-hgc" userLabel="Business Cell" customClass="BusinessCell" customModule="apphere" customModuleProvider="target">
                                         <rect key="frame" x="37.5" y="50" width="300" height="344"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -281,7 +281,6 @@ Developer: Derek Sheldon</string>
                         <viewLayoutGuide key="safeArea" id="c8w-zz-5kT"/>
                     </view>
                     <tabBarItem key="tabBarItem" systemItem="featured" id="UBn-9G-Zs9"/>
-                    <navigationItem key="navigationItem" id="Dai-vE-6wW"/>
                     <connections>
                         <outlet property="collectionView" destination="p0n-iP-3Ch" id="VWw-kY-toO"/>
                         <outlet property="searchDisplayController" destination="7cj-nR-N7d" id="vxn-CM-drq"/>
@@ -299,7 +298,7 @@ Developer: Derek Sheldon</string>
             </objects>
             <point key="canvasLocation" x="-1081" y="787"/>
         </scene>
-        <!--Business-->
+        <!--Business View Controller-->
         <scene sceneID="Eu3-25-2j8">
             <objects>
                 <viewController id="gcm-cc-Ct0" customClass="BusinessViewController" customModule="apphere" customModuleProvider="target" sceneMemberID="viewController">
@@ -307,36 +306,91 @@ Developer: Derek Sheldon</string>
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8o7-eQ-Hs9">
-                                <rect key="frame" x="331" y="20" width="44" height="44"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GtD-6W-098" userLabel="Container">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sweet" translatesAutoresizingMaskIntoConstraints="NO" id="5ZE-sE-iJ9">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="344"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="344" id="Ygl-Uv-Uql"/>
+                                        </constraints>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8o7-eQ-Hs9" userLabel="Close Button">
+                                        <rect key="frame" x="345" y="5" width="25" height="25"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="25" id="8d5-ZM-CIF"/>
+                                            <constraint firstAttribute="width" constant="25" id="OED-3U-ily"/>
+                                        </constraints>
+                                        <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="X"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="15"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="closeButtonTapped" destination="gcm-cc-Ct0" eventType="touchUpInside" id="Ns7-jR-VVL"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="evY-Nv-baR">
+                                        <rect key="frame" x="268" y="261.5" width="107" height="48"/>
+                                        <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="40"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="HERE NOW" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sHa-gu-xy3">
+                                        <rect key="frame" x="287.5" y="309.5" width="67.5" height="14.5"/>
+                                        <fontDescription key="fontDescription" type="system" weight="black" pointSize="12"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="PROMOTION" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DeM-69-JUw">
+                                        <rect key="frame" x="139" y="364" width="96" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="15"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="usv-VJ-bwq">
+                                        <rect key="frame" x="164.5" y="402" width="45" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="8d5-ZM-CIF"/>
-                                    <constraint firstAttribute="width" constant="44" id="OED-3U-ily"/>
+                                    <constraint firstItem="usv-VJ-bwq" firstAttribute="top" secondItem="DeM-69-JUw" secondAttribute="bottom" priority="950" constant="20" id="168-81-ShR"/>
+                                    <constraint firstItem="8o7-eQ-Hs9" firstAttribute="top" secondItem="GtD-6W-098" secondAttribute="top" constant="5" id="5Se-Ks-jsh"/>
+                                    <constraint firstItem="5ZE-sE-iJ9" firstAttribute="trailing" secondItem="sHa-gu-xy3" secondAttribute="trailing" constant="20" id="6c3-Jh-i6r"/>
+                                    <constraint firstItem="DeM-69-JUw" firstAttribute="top" secondItem="5ZE-sE-iJ9" secondAttribute="bottom" constant="20" id="9nK-5N-5os"/>
+                                    <constraint firstItem="sHa-gu-xy3" firstAttribute="top" secondItem="evY-Nv-baR" secondAttribute="bottom" id="Ey7-qe-mwf"/>
+                                    <constraint firstItem="usv-VJ-bwq" firstAttribute="centerX" secondItem="GtD-6W-098" secondAttribute="centerX" id="Eyh-PT-d3o"/>
+                                    <constraint firstItem="5ZE-sE-iJ9" firstAttribute="top" secondItem="GtD-6W-098" secondAttribute="top" id="IP0-7Q-Z8H"/>
+                                    <constraint firstAttribute="trailing" secondItem="5ZE-sE-iJ9" secondAttribute="trailing" id="LbZ-UZ-FnE"/>
+                                    <constraint firstItem="5ZE-sE-iJ9" firstAttribute="leading" secondItem="GtD-6W-098" secondAttribute="leading" id="Ts8-oF-rLj"/>
+                                    <constraint firstItem="5ZE-sE-iJ9" firstAttribute="bottom" secondItem="sHa-gu-xy3" secondAttribute="bottom" constant="20" id="etl-PC-PNK"/>
+                                    <constraint firstItem="sHa-gu-xy3" firstAttribute="centerX" secondItem="evY-Nv-baR" secondAttribute="centerX" id="hPv-a4-0jL"/>
+                                    <constraint firstItem="evY-Nv-baR" firstAttribute="trailing" secondItem="5ZE-sE-iJ9" secondAttribute="trailing" id="hnp-GZ-rJM"/>
+                                    <constraint firstAttribute="trailing" secondItem="8o7-eQ-Hs9" secondAttribute="trailing" constant="5" id="lZN-0R-QM5"/>
+                                    <constraint firstItem="DeM-69-JUw" firstAttribute="centerX" secondItem="GtD-6W-098" secondAttribute="centerX" id="vJy-Tk-P43"/>
                                 </constraints>
-                                <state key="normal" title="X"/>
-                                <connections>
-                                    <action selector="closeButtonTapped" destination="gcm-cc-Ct0" eventType="touchUpInside" id="Ns7-jR-VVL"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="usv-VJ-bwq">
-                                <rect key="frame" x="166" y="333" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="8o7-eQ-Hs9" firstAttribute="top" secondItem="Fpy-mn-DcO" secondAttribute="top" id="Jjb-WY-63a"/>
-                            <constraint firstItem="usv-VJ-bwq" firstAttribute="centerY" secondItem="Fpy-mn-DcO" secondAttribute="centerY" id="apB-vw-gGo"/>
-                            <constraint firstItem="usv-VJ-bwq" firstAttribute="centerX" secondItem="Fpy-mn-DcO" secondAttribute="centerX" id="bky-VB-VVu"/>
-                            <constraint firstItem="Fpy-mn-DcO" firstAttribute="trailing" secondItem="8o7-eQ-Hs9" secondAttribute="trailing" id="zym-yO-72r"/>
+                            <constraint firstItem="GtD-6W-098" firstAttribute="top" secondItem="Fpy-mn-DcO" secondAttribute="top" id="78v-Ev-MJO"/>
+                            <constraint firstItem="GtD-6W-098" firstAttribute="leading" secondItem="Fpy-mn-DcO" secondAttribute="leading" id="oZ7-4l-exB"/>
+                            <constraint firstItem="Fpy-mn-DcO" firstAttribute="bottom" secondItem="GtD-6W-098" secondAttribute="bottom" id="pRg-tx-4KF"/>
+                            <constraint firstItem="GtD-6W-098" firstAttribute="trailing" secondItem="Fpy-mn-DcO" secondAttribute="trailing" id="u52-vj-hIr"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Fpy-mn-DcO"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Business" id="bZt-vg-cP0"/>
                     <connections>
+                        <outlet property="activeCustomerCountLabel" destination="evY-Nv-baR" id="GgL-B5-aaP"/>
                         <outlet property="nameLabel" destination="usv-VJ-bwq" id="rbf-AR-cgl"/>
+                        <outlet property="photoView" destination="5ZE-sE-iJ9" id="zg9-gl-xaE"/>
+                        <outlet property="promotionLabel" destination="DeM-69-JUw" id="dwp-Ra-Vhc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="41Y-yJ-6g4" userLabel="First Responder" sceneMemberID="firstResponder"/>
